# charm_3d

./: .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  README
contrib/yaml-0.1.7/src/: yaml_private.h
doc/uml/: main.puml  ns.puml  structure-calc.puml  structure.puml
include/: charm_amr.h  charm_base_func.h  charm_bnd_cond.h  charm_def.h  charm_eos.h  charm_fluxes.h  charm_globals.h  charm_limiter.h  charm_models.h  charm_version.h  charm_vtk.h  charm_xml.h  charm_yaml.h
samples/klin_amr/: klin.geo  klin.msh  task.yaml
samples/naca0012/: naca0012.geo  naca0012.msh  task.yaml
src/: chamr_3d.c  charm_3d.c  charm_amr.c  charm_amr.h  charm_base_func.c  charm_base_func.h  charm_bnd_cond.c  charm_bnd_cond.h  charm_bnd_cond_low_mach.c  charm_connectivity.c  charm_connectivity.cpp  charm_connectivity.h  charm_eos.c  charm_fluxes.c  charm_fluxes.h  charm_geom.c  charm_geom.h  charm_globals.c  charm_globals.h  charm_grad.c  charm_grad.h  charm_init.c  charm_init.h  charm_init_yaml.c  charm_init_yaml.cpp  charm_limiter.c  charm_limiter.h  charm_linsolver.c  charm_linsolver.h  charm_lsolver.c  charm_lsolver.h  charm_output.c  charm_output.h  charm_restart.cpp  charm_timestep.c  charm_timestep.h  charm_timestep_conv.c  charm_timestep_conv.h  charm_timestep_correct_velosity.c  charm_timestep_correct_velosity.h  (+13 more)
src/limiters/: charm_limiter.c  charm_limiter_bj.c
src/models/advection/: charm_model.c  charm_model_adv_amr.c  charm_model_adv_init.cpp
src/models/euler/: charm_model.c  charm_model_euler_init.cpp
src/models/ns/: charm_model.c  charm_model_ns_chem.c  charm_model_ns_conv.c  charm_model_ns_diff.c  charm_model_ns_diff_grad.c  charm_model_ns_diff_integrals.c  charm_model_ns_diffusion.c  charm_model_ns_geom.c  charm_model_ns_init.cpp  charm_model_ns_init_cond.c  charm_model_ns_turb.c
src/models/ns/turb/: charm_model_ns_turb_sa.c  charm_model_ns_turb_sa_grad.c  charm_model_ns_turb_sst.c
src/models/ns_li/: charm_model.c  charm_model_ns_li_chem.c  charm_model_ns_li_conv.c  charm_model_ns_li_diff.c  charm_model_ns_li_diff_grad.c  charm_model_ns_li_diff_integrals.c  charm_model_ns_li_init.cpp
src/models/ns_low_mach/: charm_model.c  charm_model_ns_low_mach_conv.c  charm_model_ns_low_mach_diff.c  charm_model_ns_low_mach_diff_grad.c  charm_model_ns_low_mach_diff_integrals.c  charm_model_ns_low_mach_pressure.c  charm_model_ns_low_mach_pressure.cpp  charm_model_ns_low_mach_pressure_div_vel.c  charm_model_ns_low_mach_pressure_grad.c  charm_model_ns_low_mach_pressure_integrals.c
src/models/viscous/: charm_timestep_diff.c
src/utils/tet2hex/: tet2hex.cpp
